# tracker

./: .gitignore  README.md
.github/workflows/: build-macos-release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: app.js  index.html  styles.css
