[package]
name = "tracker"
version = "0.1.0"
description = "A desktop time tracker for tasks, GitHub issues, and pull requests."
edition = "2024"

[lib]
name = "tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tracker"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
keyring = "4.1.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
thiserror = "2"
